@@ -904,6 +904,56 @@ extern PyTypeObject MMLZStreamType;
     Py_INCREF(Py_None); \
     return Py_None; \
 
+#define TABLE_DIV \
+    int i, tabsize; \
+    MYFLT x = 0.0; \
+    MYFLT *list = NULL; \
+    PyObject *table = NULL; \
+    if (PyNumber_Check(arg)) { \
+        x = PyFloat_AsDouble(arg); \
+        if (x >= 0 && x < 1.0e-24) \
+            x = 1.0e-24; \
+        else if (x < 0 && x > -1.0e-24) \
+            x = -1.0e-24; \
+        for (i=0; i<self->size; i++) { \
+            self->data[i] /= x; \
+        } \
+    } \
+    else if ( PyObject_HasAttrString((PyObject *)arg, "getTableStream") == 1 ) { \
+        Py_XDECREF(table); \
+        table = PyObject_CallMethod((PyObject *)arg, "getTableStream", ""); \
+        list = TableStream_getData((TableStream *)table); \
+        tabsize = TableStream_getSize((TableStream *)table); \
+        if (self->size < tabsize) \
+            tabsize = self->size; \
+        for (i=0; i<tabsize; i++) { \
+            x = list[i]; \
+            if (x >= 0 && x < 1.0e-24) \
+                x = 1.0e-24; \
+            else if (x < 0 && x > -1.0e-24) \
+                x = -1.0e-24; \
+            self->data[i] /= x; \
+        } \
+    } \
+    else if (PyList_Check(arg)) { \
+        tabsize = PyList_Size(arg); \
+        if (self->size < tabsize) \
+            tabsize = self->size; \
+        for (i=0; i<tabsize; i++) { \
+            x = PyFloat_AsDouble(PyList_GET_ITEM(arg, i)); \
+            if (x >= 0 && x < 1.0e-24) \
+                x = 1.0e-24; \
+            else if (x < 0 && x > -1.0e-24) \
+                x = -1.0e-24; \
+            self->data[i] /= x; \
+        } \
+    } \
+ \
+    self->data[self->size] = self->data[0]; \
+ \
+    Py_INCREF(Py_None); \
+    return Py_None; \
+
 #define SET_TABLE \
     int i; \
     if (arg == NULL) { \
