@@ -1,5 +1,9 @@
 2020-11-25 belangeo <belangeo@gmail.com>
 
+    * Added a div method to PyoTableObject.
+
+2020-11-25 belangeo <belangeo@gmail.com>
+
     * Added a shape argument to PyoTableObject.fadein and  PyoTableObject.fadeout methods.
 
 2020-11-23 belangeo <belangeo@gmail.com>
